Fix spacing issue

--- a/web/src/pages/landingPage/landing.css
+++ b/web/src/pages/landingPage/landing.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     width: 100%;
 
-    margin: 0.5rem;
+    padding: 0.5rem 1rem;
 
 }
 
